Fixed misaligned icon

--- a/mainPage.css
+++ b/mainPage.css
@@ -24,12 +24,17 @@ body {
 ::-webkit-scrollbar-thumb {
     background: rgb(87, 218, 222);
     border-radius: 15px;
-  }
+}
 
 .navbar-icon-searchbar {
     display: flex; 
     flex-direction: row; 
     align-items: center;
+    padding-bottom: 0;
+}
+
+.icon {
+    height: 2.8em;
 }
 
 .first-section {
@@ -117,6 +122,11 @@ nav {
 
 nav img {
     margin-right: 20px;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
 }
 
 .search-bar {
@@ -284,7 +294,7 @@ footer {
     background-color: rgb(40, 40, 40);
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 1000px) {
     :root {
         font-size: 0.7rem;
     }
